@@ -1,2 +1,2 @@
 name,version,revision,url,license,copyright
-Apache Portable Runtime Iconv Library,1.2.1,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000 Konstantin Chuguev
+Apache Portable Runtime Iconv Library,1.2.2,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000-2017 The Apache Software Foundation
