@@ -1,2 +1,2 @@
 name,version,revision,url,license,copyright
-Apache Portable Runtime Utility Library,1.5.4,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000-2014 The Apache Software Foundation
+Apache Portable Runtime Utility Library,1.6.1,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000-2016 The Apache Software Foundation
