@@ -1,0 +1,2 @@
+name,version,revision,url,license,copyright
+Expat,2.2.6,39e487da353b20bb3a724311d179ba0fddffc65b,https://github.com/libexpat/libexpat,MIT,Copyright (c) 1998-2000 Thai Open Source Software Center Ltd and Clark Cooper and Copyright (c) 2001-2017 Expat maintainers
